[package]
name = "emu6"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"
description = "Cross-platform assemble program emulator that is 666!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
xmas-elf = "0.7"
bitflags = "1"
